--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>3.5.5-RELEASE</version>
+	<version>3.5.6-RELEASE</version>
 	
 	<name>maven-web-application</name>
 
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>JOMACS Releases Nexus Repository</name>
-	      <url>http://3.83.105.16:8081/repository/rhk-release/</url>
+	      <url>http://18.212.22.120/repository/rhk-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>JOMACS Snapshot Nexus Repository </name>
-	      <url>http://3.83.105.16:8081/repository/rhk-snapshot/</url>
+	      <url>http://18.212.22.120:8081/repository/rhk-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
