--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>3.5.6-RELEASE</version>
+	<version>5.0.0-SNAPSHOT</version>
 	
 	<name>maven-web-application</name>
 
