--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>JOMACS Releases Nexus Repository</name>
-	      <url>http://18.212.22.120/repository/rhk-release/</url>
+	      <url>http://18.212.22.120:8081/repository/rhk-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
