--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Grant file permission
-      run: chomod +x pom.xml
+      run: chmod +x pom.xml
     - name: Build with Maven
       run: mvn -B test package --file pom.xml
             
