--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,16 +29,16 @@ jobs:
         cache: maven
     - name: Grant file permission
       run: chmod +x pom.xml
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v6
+    - name: Build & push Docker image
       with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-          push: true
-          tags: snana/maven-app:1.0.0
+        image: snana/maven-app
+        tags: v1, latest
+        registry: registry-url.io
+        dockerfile: Dockerfile.ci
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
             
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     #- name: Update dependency graph
