--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,13 +29,11 @@ jobs:
         cache: maven
     - name: Grant file permission
       run: chmod +x pom.xml
-    - uses: mr-smithers-excellent/docker-build-push@v6
-      name: Build & push Docker image
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v4
       with:
-        image: repo/image
-        tags: v1, latest
+        image: snana/maven-app
         registry: docker.io
-        dockerfile: Dockerfile.ci
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
             
